--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
                   }
                 </style>
                 <div class="header__logo">
-                  <a href="index-three.html" class="header__logo--link">
+                  <a href="index.html" class="header__logo--link">
                     <img src="ust assets/PITA-removebg-preview.png" alt="unipix" />
                     <div style="text-align: center" class="header__logo--text">
                       <div style="font-weight: bold; color: black">
@@ -89,7 +89,7 @@
                         </style>
                         <li class="navigation__menu--item">
                           <a
-                            href="index-three.html"
+                            href="index.html"
                             class="navigation__menu--item__link"
                             style="
                               font-weight: bold;
@@ -111,7 +111,7 @@
                             <li><a href="about.html">About</a></li>
                             <li><a href="athletics.html">Athletics</a></li>
                             <li class="has-child has-arrow">
-                              <a href="index-three.html">Faculty</a>
+                              <a href="index.html">Faculty</a>
                               <ul class="sub__style">
                                 <li>
                                   <a href="faculty.html">Faculty Staff</a>
@@ -123,7 +123,7 @@
                                 </li>
                               </ul>
                             </li>
-                            <li><a href="index-three.html">Research</a></li>
+                            <li><a href="index.html">Research</a></li>
                           </ul>
                         </li>
                         <li class="navigation__menu--item has-child has-arrow">
@@ -222,7 +222,7 @@
             <div class="breadcrumb-content">
               <ul class="breadcrumb">
                 <li style="color: #7289da" class="breadcrumb-item">
-                  <a href="index-three.html">Home</a>
+                  <a href="index.html">Home</a>
                 </li>
                 <li
                   style="color: #7289da"
@@ -763,7 +763,7 @@
             <ul class="mainmenu metismenu" id="mobile-menu-active">
 
                 <li>
-                    <a href="index-three.html" class="main">Home</a>
+                    <a href="index.html" class="main">Home</a>
                 </li>
                 
                 <li class="has-droupdown">
