--- a/careers.html
+++ b/careers.html
@@ -59,7 +59,7 @@
                                 }
                             </style>
                             <div class="header__logo">
-                                <a href="index-three.html" class="header__logo--link">
+                                <a href="index.html" class="header__logo--link">
                                     <img src="ust assets/PITA-removebg-preview.png" alt="unipix">
                                     <div style="text-align: center;" class="header__logo--text">
                                         <div style="font-weight: bold; color: black;">Polytechnic Institute of Tabaco</div>
@@ -77,7 +77,7 @@
                                                 }
                                             </style>
                                             <li class="navigation__menu--item">
-                                                <a href="index-three.html" class="navigation__menu--item__link"style="font-weight: bold;color: black; margin-right:-20px">Home</a>
+                                                <a href="index.html" class="navigation__menu--item__link"style="font-weight: bold;color: black; margin-right:-20px">Home</a>
                                             </li>
 
                                             <li class="navigation__menu--item has-child has-arrow">
@@ -166,7 +166,7 @@
                 <div class="col-12">
                     <div class="breadcrumb-content">
                         <ul class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="index-three.html">Home</a></li>
+                            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                             <li class="breadcrumb-item"><a href="#">Discover</a></li>
                             <li class="breadcrumb-item active" aria-current="page">Careers</li>
                         </ul>
@@ -505,7 +505,7 @@
             <div class="row gy-5 gy-lg-0">
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="rts-footer-widget w-320">
-                        <a href="index-three.html" class="d-block rts-footer-logo mb--40">
+                        <a href="index.html" class="d-block rts-footer-logo mb--40">
                             <img src="ust assets/PITA-removebg-preview.png" alt="Unipix">
                         </a>
                         <p>
@@ -634,7 +634,7 @@
                 <ul class="mainmenu metismenu" id="mobile-menu-active">
 
                     <li>
-                        <a href="index-three.html" class="main">Home</a>
+                        <a href="index.html" class="main">Home</a>
                     </li>
                     
                     <li class="has-droupdown">
